# shortcut-mcp

./: .gitignore  README.md  pyproject.toml  shortcut_server.py
src/shortcut_mcp/: __init__.py  __main__.py  cli.py  server.py
