[project]
name = "shortcut-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for interacting with Shortcut"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "httpx",
    "python-dotenv",
    "pylint>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pylint"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shortcut_mcp"]

[tool.pylint]
max-line-length = 120
